fix spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -594,9 +594,9 @@ header nav {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
+        justify-content: flex-end;
+    -webkit-box-align: end;
+        -ms-flex-align: flex-end;
             align-items: center;
     width: 100%;
     height: 100%;
@@ -605,6 +605,7 @@ header nav {
 header nav a {
     font-weight: 600;
     font-size: 15px;
+    margin: 0 30px;
     text-transform: capitalize;
 }
 
@@ -615,6 +616,15 @@ header nav a:hover {
 
 header nav a:not(:first-child) {
     display: none;
+}
+
+.logo {
+    margin-left: 5%;
+    margin-right: auto;
+}
+
+header nav a:last-child {
+    margin-right: 5%;
 }
 
 .main_header_area.sticky nav a:not(:first-child).current_page_item,
